--- a/index.html
+++ b/index.html
@@ -351,77 +351,129 @@
                             <div class="col-lg-6">
                                 <div class="project__item">
                                     <div class="project__item-content">
-                                        <h3 class="project__item-heading line-clamp line-clamp-1">
-                                            Wally Website 
+                                        <h3
+                                            class="project__item-heading line-clamp line-clamp-1"
+                                        >
+                                            Wally Website
                                         </h3>
-                                        <p class="project__item-desc line-clamp line-clamp-2">
-                                            Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                                        <p
+                                            class="project__item-desc line-clamp line-clamp-2"
+                                        >
+                                            Lorem ipsum dolor amet, consectetur
+                                            adipiscing st elit.
                                         </p>
-                                        <a href="#" class="project__item-link"> 
+                                        <a href="#" class="project__item-link">
                                             Case Study
                                         </a>
                                     </div>
-                                    <a href="#" >
-                                        <img class="project__item-img" src="./assets/img/project-01.png" alt="">
+                                    <a href="#">
+                                        <img
+                                            class="project__item-img"
+                                            src="./assets/img/project-01.png"
+                                            alt=""
+                                        />
                                     </a>
-                                    <img class="project-diagonal" src="./assets/icon/project-diagonal.svg" alt="">
+                                    <img
+                                        class="project-diagonal"
+                                        src="./assets/icon/project-diagonal.svg"
+                                        alt=""
+                                    />
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="project__item">
                                     <div class="project__item-content">
-                                        <h3 class="project__item-heading line-clamp line-clamp-1">  
+                                        <h3
+                                            class="project__item-heading line-clamp line-clamp-1"
+                                        >
                                             Banking App
                                         </h3>
-                                        <p class="project__item-desc line-clamp line-clamp-2">
-                                            Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                                        <p
+                                            class="project__item-desc line-clamp line-clamp-2"
+                                        >
+                                            Lorem ipsum dolor amet, consectetur
+                                            adipiscing st elit.
                                         </p>
                                         <a href="#" class="project__item-link">
                                             Case Study
                                         </a>
                                     </div>
-                                    <a href="#" >
-                                        <img class="project__item-img" src="./assets/img/project-02.png" alt="">
+                                    <a href="#">
+                                        <img
+                                            class="project__item-img"
+                                            src="./assets/img/project-02.png"
+                                            alt=""
+                                        />
                                     </a>
-                                    <img class="project-diagonal" src="./assets/icon/project-diagonal.svg" alt="">
+                                    <img
+                                        class="project-diagonal"
+                                        src="./assets/icon/project-diagonal.svg"
+                                        alt=""
+                                    />
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="project__item">
                                     <div class="project__item-content">
-                                        <h3 class="project__item-heading line-clamp line-clamp-1">
+                                        <h3
+                                            class="project__item-heading line-clamp line-clamp-1"
+                                        >
                                             Web App
                                         </h3>
-                                        <p class="project__item-desc line-clamp line-clamp-2">
-                                            Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                                        <p
+                                            class="project__item-desc line-clamp line-clamp-2"
+                                        >
+                                            Lorem ipsum dolor amet, consectetur
+                                            adipiscing st elit.
                                         </p>
                                         <a href="#" class="project__item-link">
                                             Case Study
                                         </a>
                                     </div>
-                                    <a href="#" >
-                                        <img class="project__item-img" src="./assets/img/project-03.png" alt="">
+                                    <a href="#">
+                                        <img
+                                            class="project__item-img"
+                                            src="./assets/img/project-03.png"
+                                            alt=""
+                                        />
                                     </a>
-                                    <img class="project-diagonal" src="./assets/icon/project-diagonal.svg" alt="">
+                                    <img
+                                        class="project-diagonal"
+                                        src="./assets/icon/project-diagonal.svg"
+                                        alt=""
+                                    />
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="project__item">
                                     <div class="project__item-content">
-                                        <h3 class="project__item-heading line-clamp line-clamp-1">
+                                        <h3
+                                            class="project__item-heading line-clamp line-clamp-1"
+                                        >
                                             Oculus Website
                                         </h3>
-                                        <p class="project__item-desc line-clamp line-clamp-2">
-                                            Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                                        <p
+                                            class="project__item-desc line-clamp line-clamp-2"
+                                        >
+                                            Lorem ipsum dolor amet, consectetur
+                                            adipiscing st elit.
                                         </p>
                                         <a href="#" class="project__item-link">
                                             Case Study
                                         </a>
                                     </div>
-                                    <a href="#" >
-                                        <img class="project__item-img" src="./assets/img/project-04.png" alt="">
+                                    <a href="#">
+                                        <img
+                                            class="project__item-img"
+                                            src="./assets/img/project-04.png"
+                                            alt=""
+                                        />
                                     </a>
-                                    <img class="project-diagonal" src="./assets/icon/project-diagonal.svg" alt="">
+                                    <img
+                                        class="project-diagonal"
+                                        src="./assets/icon/project-diagonal.svg"
+                                        alt=""
+                                    />
                                 </div>
                             </div>
                         </div>
@@ -429,6 +481,65 @@
                     </div>
                 </div>
             </section>
+
+            <!-- About -->
+            <section class="about">
+                <div class="container">
+                    <div class="about__title">
+                        <span> Hey,,,,It’s Arif</span>
+                        <img src="./assets/icon/hand.svg" alt="" />
+                    </div>
+                    <h2 class="about__sub-heading line-clamp line-clamp-1">
+                        Interactive Designer
+                    </h2>
+                    <p class="about__desc line-clamp">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        In urna, non nisl tincidunt ut elementum turpis.
+                    </p>
+                    <span class="about__separation"></span>
+                    <div class="about__list">
+                        <div class="about__item">
+                            <div class="about__statistical">08+</div>
+                            <p class="about__item-desc">Years Experience</p>
+                        </div>
+                        <div class="about__item">
+                            <div class="about__statistical">21+</div>
+                            <p class="about__item-desc">Features & Awards</p>
+                        </div>
+                        <div class="about__item">
+                            <div class="about__statistical">97%</div>
+                            <p class="about__item-desc">Clients Rating</p>
+                        </div>
+                    </div>
+                    <span class="about__separation"></span>
+                    <div class="row row-cols-1 about__video">
+                        <div class="col">
+                            <button class="about__play">
+                                <img
+                                    src="./assets/icon/about-play.svg"
+                                    alt=""
+                                />
+                            </button>
+                            <video
+                                id="videoPlayer"
+                                width="100%"
+                                height="628px"
+                                controls
+                                poster="./assets/img/about-video.png"
+                            >
+                                <source
+                                    src="./assets/video/Động lực để học IT.mp4"
+                                    type="video/mp4"
+                                />
+                            </video>
+                            <a href="#!" class="about__intro btn"
+                                >Intro Video</a
+                            >
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
+        <script src="./main.js"></script>
     </body>
 </html>
