Làm phần Feature

--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                                 </div>
                                 <div class="question__list-controls">
                                     <img
-                                        class="question__img question__img--subtract "
+                                        class="question__img question__img--subtract"
                                         src="./assets/icon/question-sub.svg"
                                         alt=""
                                     />
@@ -733,7 +733,7 @@
                                 </div>
                                 <div class="question__list-controls">
                                     <img
-                                        class="question__img question__img--subtract "
+                                        class="question__img question__img--subtract"
                                         src="./assets/icon/question-sub.svg"
                                         alt=""
                                     />
@@ -811,7 +811,7 @@
                                 </div>
                                 <div class="question__list-controls">
                                     <img
-                                        class="question__img  question__img--subtract"
+                                        class="question__img question__img--subtract"
                                         src="./assets/icon/question-sub.svg"
                                         alt=""
                                     />
@@ -819,6 +819,48 @@
                                         class="question__img question__img--detail active"
                                         src="./assets/icon/question-add.svg"
                                         alt=""
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Feature -->
+            <section class="feature">
+                <div class="container">
+                    <div class="feature__inner">
+                        <h2 class="feature__sub-heading">My atmosphere</h2>
+                        <p class="feature__desc">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. In urna, non nisl tincidunt ut elementum
+                            turpis.
+                        </p>
+                        <p class="feature__email">@interaction_arif</p>
+
+                        <!-- feature-list -->
+                        <div class="feature__list">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img
+                                        class="feature__img"
+                                        src="./assets/img/featured-01.png"
+                                        alt="My atmosphere"
+                                    />
+                                </div>
+                                <div class="col-md-4">
+                                    <img
+                                        class="feature__img"
+                                        src="./assets/img/featured-02.png"
+                                        alt="My atmosphere"
+                                    />
+                                </div>
+                                <div class="col-md-4">
+                                    <img
+                                        class="feature__img"
+                                        src="./assets/img/featured-03.png"
+                                        alt="My atmosphere"
                                     />
                                 </div>
                             </div>
