Làm phần Contact

--- a/index.html
+++ b/index.html
@@ -868,6 +868,47 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Concact -->
+            <section class="contact">
+                <div class="container">
+                    <div class="contact__inner">
+                        <img
+                            class="contact__icon"
+                            src="./assets/img/contact-01.png"
+                            alt=""
+                        />
+                        <div class="contact__content">
+                            <h2 class="contact__sub-heading">
+                                Got a project? Let’s talk
+                            </h2>
+                            <p class="contact__desc">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. In urna, non nisl tincidunt ut
+                                elementum turpis.
+                            </p>
+                            <div class="btn contact__btn">Book a Call</div>
+                        </div>
+
+                        <!-- Contact decorate -->
+                        <img
+                            class="contact__decorate contact__decorate-1"
+                            src="./assets/icon/contact-icon-01.svg"
+                            alt=""
+                        />
+                        <img
+                            class="contact__decorate contact__decorate-2"
+                            src="./assets/icon/contact-icon-02.svg"
+                            alt=""
+                        />
+                        <img
+                            class="contact__decorate contact__decorate-3"
+                            src="./assets/icon/contact-icon-03.svg"
+                            alt=""
+                        />
+                    </div>
+                </div>
+            </section>
         </main>
         <script src="./main.js"></script>
     </body>
