Làm phần Footer

--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
             <div class="container heder__container">
                 <div class="menu">
                     <!-- Email -->
-                    <div class="email">
-                        <div class="email__icon">
+                    <div class="menu__email">
+                        <div class="menu__email-icon">
                             <img
                                 src="./assets/icon/icon-heart.png"
                                 alt=""
-                                class="email__icon--heart"
+                                class="menu__email-icon--heart"
                             />
                         </div>
-                        <div class="email__text">hi@arif.interactive</div>
+                        <div class="menu__email-text">hi@arif.interactive</div>
                     </div>
                     <!-- Logo -->
                     <a href="">
@@ -124,7 +124,7 @@
             </div>
         </header>
         <!-- Main -->
-        <main style="height: 10000px">
+        <main>
             <!-- Hero -->
             <section class="hero">
                 <div class="container">
@@ -910,6 +910,63 @@
                 </div>
             </section>
         </main>
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="container footer__container">
+                <div class="menu">
+                    <!-- Email -->
+                    <div class="menu__email">
+                        <div class="menu__email-icon">
+                            <img
+                                src="./assets/icon/icon-heart.png"
+                                alt=""
+                                class="menu__email-icon--heart"
+                            />
+                        </div>
+                        <div class="menu__email-text">hi@arif.interactive</div>
+                    </div>
+                    <!-- Logo -->
+                    <a href="">
+                        <img src="./assets/icon/logo.png" alt="" class="logo" />
+                    </a>
+                    <!-- Navigation -->
+                    <nav class="navigation">
+                        <ul class="navigation__list">
+                            <li>
+                                <a href="" class="navigation__link">Projects</a>
+                            </li>
+                            <li>
+                                <a href="" class="navigation__link">Journey</a>
+                            </li>
+                            <li>
+                                <a href="" class="navigation__link">Service</a>
+                            </li>
+                            <li>
+                                <a href="" class="navigation__link">Contact</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="separation"></div>
+                <div class="footer__info">
+                    <p class="footer__copyright">
+                        ©interactiveArif 2021. All rights reserved.
+                    </p>
+                    <ul class="footer__menu">
+                        <li>
+                            <a href="#!" class="footer__menu--link"
+                                >Privacy Policy</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#!" class="footer__menu--link"
+                                >Terms of Conditions</a
+                            >
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
         <script src="./main.js"></script>
     </body>
 </html>
